force-app/main/default/objects/Container_Tracker__c/Container_Tracker__c.object-meta.xml
<CustomObject>
    <label>Container Tracker</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Container Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Containers Tracker</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>