force-app/main/default/objects/Container_Tracker__c/fields/Cargo_Ship__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Ship__c</fullName>
    <label>Cargo Ship</label>
    <referenceTo>Cargo_Ship__c</referenceTo>
    <relationshipLabel>Containers Tracker</relationshipLabel>
    <relationshipName>Containers_Tracker</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>