force-app/main/default/objects/Container_Tracker__c/fields/Container__c.field-meta.xml
<CustomField>
    <fullName>Container__c</fullName>
    <label>Container</label>
    <referenceTo>Container__c</referenceTo>
    <relationshipLabel>Containers Tracker</relationshipLabel>
    <relationshipName>Containers_Tracker</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>