force-app/main/default/objects/Container_Tracker__c/fields/Container_Color__c.field-meta.xml
<CustomField>
    <fullName>Container_Color__c</fullName>
    <label>Container Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue</fullName>
                <default>true</default>
                <label>Blue</label>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>